[gd_scene load_steps=27 format=4 uid="uid://15xf4lj7c2qf"]

[ext_resource type="Texture2D" uid="uid://bfsd2uff6srhu" path="res://assets/Abandoned_House/Abandoned_House/Models/Abandoned_House_Tele1.jpg" id="1_w12gt"]
[ext_resource type="Script" path="res://objects/tvs/living_room_tv.gd" id="2_qmbta"]
[ext_resource type="AudioStream" uid="uid://dyh3tbwu73ub4" path="res://videos/cartoon.ogg" id="3_da2kf"]
[ext_resource type="Material" uid="uid://dglyys8aa175s" path="res://material/contorno.tres" id="4_p314x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ahj7o"]
resource_name = "Tele1"
cull_mode = 2
albedo_texture = ExtResource("1_w12gt")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_wtk3f"]
_surfaces = [{
"aabb": AABB(-0.885392, -0.612686, -0.464239, 1.77084, 1.22757, 1.02555),
"format": 34896613377,
"index_count": 108,
"index_data": PackedByteArray("AwATAAcAAwASABMADAAFAA8ADAAEAAUACwAJAAgACwAKAAkADQAEAAwADQAAAAQADwABAA4ADwAFAAEAAAAOAAEAAAANAA4ABQAIAAEABQALAAgABAALAAUABAAKAAsAAQAJAAAAAQAIAAkAAAAKAAQAAAAJAAoAAgAMAAYAAgANAAwABwAOAAMABwAPAA4ABgAPAAcABgAMAA8AAwANAAIAAwAOAA0AEQATABIAEQAQABMABwAQAAYABwATABAABgARAAIABgAQABEAAgASAAMAAgARABIA"),
"name": "Tele1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("AAAAAGOoAAAAAP//MqsAANxFHxgAAAAA3EX46AAAAAD//wAAY6gAAP////8yqwAAD/QfGAAAAAAP9PjoAAAAAMcbZuH8/wAAxxvbGv//AAA35Nsa//8AADfkZuH8/wAA//8AAAAAAAAAAAAAAAAAAAAA//8AAAAA/////wAAAABD7hIftRQAAKhLEh+1FAAAqEsF4rUUAABD7gXitRQAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_uf870"]
resource_name = "Abandoned_House_Cube_195"
_surfaces = [{
"aabb": AABB(-0.885392, -0.612686, -0.464239, 1.77084, 1.22757, 1.02555),
"attribute_data": PackedByteArray("B8Zp+QfGf/levl7/4rrT9AfGofkHxqH5M76e8NXGt/Sj3eHzo93h86Pd4fOj3eHzo90Bi6PdAYuj3QGLo90Bi5S3afmUt3/5Xr5e/+K60/SUt6H5lLeh+TO+nvDVxrf09Yfh8/WH4fP1h+Hz9Yfh8/WHAov1hwKL9YcCi/WHAot1xJ3ydcTP/Yi7Y/J1xMj9dcSf/Zu70v0lucj9Jbmf/Zu70v0luZ3yJbnP/Yi7Y/IWgv//lLdj8eK6R/v/////B8Zj8eK6R/v//3F/B8Zj8dXGR/sWgnF/lLdj8dXGR/vPimTwz4pk8M+KZPDJ2mTwydpk8MnaZPDJ2n+Oydp/jsnaf47Pin+Oz4p/js+Kf44="),
"format": 34896613399,
"index_count": 108,
"index_data": PackedByteArray("DgBCAB4ADgA/AEIALgAXADcALgATABcAKQAjACAAKQAmACMAMAARAC0AMAABABEANgAFADMANgAVAAUAAwA0AAcAAwAxADQAFAAhAAQAFAAqACEAEgArABYAEgAoACsABgAlAAIABgAiACUAAAAnABAAAAAkACcACQAsABgACQAvACwAHQAyAAwAHQA1ADIAGQA1ABwAGQAsADUADQAvAAgADQAyAC8AOwBBAD4AOwA4AEEAHwA6ABsAHwBDADoAGgA8AAoAGgA5ADwACwBAAA8ACwA9AEAA"),
"material": SubResource("StandardMaterial3D_ahj7o"),
"name": "Tele1",
"primitive": 3,
"uv_scale": Vector4(1.96653, 1.97886, 0, 0),
"vertex_count": 68,
"vertex_data": PackedByteArray("AAAAAGOo//8AAAAAY6j//wAAAABjqBEAAAAAAGOoqioAAP//MqsAAAAA//8yqwAAAAD//zKrEwAAAP//MquqKtxFHxgAAP//3EUfGAAA///cRR8YAAD//9xFHxgAAFfS3EX46AAA///cRfjoAAD//9xF+OgAAP//3EX46AAAV9L//wAAY6j/////AABjqP////8AAGOoT6v//wAAY6hU1f////8yqwAA/////zKrAAD/////MqtPq/////8yq1TVD/QfGAAA//8P9B8YAAD//w/0HxgAAP//D/QfGAAAV9IP9PjoAAD//w/0+OgAAP//D/T46AAA//8P9PjoAABX0scbZuH8/wAAxxtm4fz/AADHG2bh/P8TAMcb2xr//wAAxxvbGv/////HG9sa//8SADfk2xr//wAAN+TbGv////835Nsa//9PqzfkZuH8/wAAN+Rm4fz/AAA35Gbh/P9Pq///AAAAAP////8AAAAA/////wAAAABU1QAAAAAAAP//AAAAAAAA//8AAAAAAACqKgAA//8AAP//AAD//wAAAAAAAP//AACqKv////8AAP///////wAAAAD/////AABU1UPuEh+1FP//Q+4SH7UU//9D7hIftRRX0qhLEh+1FP//qEsSH7UU//+oSxIftRRX0qhLBeK1FP//qEsF4rUU//+oSwXitRRX0kPuBeK1FP//Q+4F4rUU//9D7gXitRRX0v9/Xkv/f/8/o1Dof1TVVNX/f8Sy/3//v6JQ6X9U1VTV/3////9/////f1/M/38AAP9//v//f/7/X0z+//9/AAD/f15L/3//P8J/cwCqKqoq/3/Esv9//7/Ef3UAqiqqKv9/////f/7//39fzP9//v//f////3///19M/v//f/7//3//f/9/xLKiUOp//3//f/9/XkuiUOh//3//f/9/XkvAf3MA/3//f/9/xLLEf3UA/3/+//9//z+qKqoq/3////9//z9U1VTV/3/+//9//79U1VTV/3////9//7+qKqoq/3////9/X8z/f/7//3////9/X8z/fwAA/3///19M/v//fwAA/3///19M/v//f/7/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wtk3f")

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_7ive1"]
file = "res://videos/ace of base.ogg"

[sub_resource type="Shader" id="Shader_rl8gx"]
code = "/*
	CRT shader for Godot Engine by Yui Kinomoto @arlez80
*/
shader_type canvas_item;

// 画面
uniform sampler2D screen_texture : hint_screen_texture;

// ブラウン管のガラスの曲がり具合（フラットなやつは0.0でいいかな）
uniform float crt_curve : hint_range( 0.0, 1.0 ) = 0.02;
// 走査線の濃さ
uniform float crt_scan_line_color : hint_range( 0.0, 1.0 ) = 0.347;
// 光量
uniform float aperture_grille_rate : hint_range( 0.0, 1.0 ) = 0.4;
// RFスイッチ的ブラー
uniform float rf_switch_esque_blur : hint_range( 0.0, 1.0 ) = 1.0;
// 白色ノイズ
uniform float white_noise_rate : hint_range( 0.0, 1.0 ) = 0.0;

float random( vec2 pos )
{
	return fract(sin(dot(pos, vec2(12.9898,78.233))) * 43758.5453);
}

void fragment( )
{
	// ガラスの曲がり具合
	vec2 crt_curve_shift = ( vec2( 1.0, 1.0 ) - sin( UV.yx * PI ) ) * crt_curve;
	vec2 crt_curve_scale = vec2( 1.0, 1.0 ) + crt_curve_shift * 2.0;
	vec2 texture_fixed_uv = UV * crt_curve_scale - crt_curve_shift;
	vec2 fixed_uv = SCREEN_UV * crt_curve_scale - crt_curve_shift;
	// 範囲外を消す
	float enable_color = float( 0.0 <= texture_fixed_uv.x && texture_fixed_uv.x <= 1.0 && 0.0 <= texture_fixed_uv.y && texture_fixed_uv.y <= 1.0 );

	// ガラスの曲がり具合から元色を取得 + RFスイッチ的ブラー
	COLOR.rgb = (
		(
			texture( screen_texture, fixed_uv ).rgb
		*	( 1.0 - rf_switch_esque_blur * 0.5 )
		)
	+	(
			(
				texture( screen_texture, fixed_uv + vec2( -SCREEN_PIXEL_SIZE.x * 3.1, 0.0 ) ).rgb
			+	texture( screen_texture, fixed_uv + vec2( SCREEN_PIXEL_SIZE.x * 3.1, 0.0 ) ).rgb
			)
			*	( rf_switch_esque_blur * 0.25 )	// （RFノイズ）0.5 * （テクスチャから読んだ2箇所を半分にしたい）0.5
		)
	) * enable_color;
	COLOR.a = 1.0;

	// ------------------------------------------------
	// 以下はアパーチャグリル上の1ピクセルごとの処理
	vec2 aperture_grille_pixel = vec2( floor( ( fixed_uv.x / SCREEN_PIXEL_SIZE.x ) / 3.0 ) * 3.0, fixed_uv.y );

	// 白色ノイズ
	float white_noise = random( aperture_grille_pixel + vec2( sin( TIME * 0.543254 ), cos( TIME * 0.254323563 ) ) );
	COLOR.rgb = mix(
		COLOR.rgb
	,	vec3( white_noise, white_noise, white_noise )
	,	white_noise_rate * enable_color
	);

	// アパーチャグリル再現
	float aperture_grille_point = mod( ( ( SCREEN_UV.x * crt_curve_scale.x ) - crt_curve_shift.x ) / SCREEN_PIXEL_SIZE.x, 3.0 );
	float aperture_grille_r_rate = clamp( 1.0 - aperture_grille_point, 0.0, 1.0 ) + clamp( aperture_grille_point - 2.0, 0.0, 1.0 );
	float aperture_grille_g_rate = clamp( 1.0 - abs( 1.0 - aperture_grille_point ), 0.0, 1.0 );
	float aperture_grille_b_rate = 1.0 - aperture_grille_r_rate - aperture_grille_g_rate;
	COLOR = clamp(
		COLOR * vec4(
			normalize( vec3(
				clamp( aperture_grille_r_rate, aperture_grille_rate, 1.0 )
			,	clamp( aperture_grille_g_rate, aperture_grille_rate, 1.0 )
			,	clamp( aperture_grille_b_rate, aperture_grille_rate, 1.0 )
			) )
		,	1.0
		)
	,	vec4( 0.0, 0.0, 0.0, 0.0 )
	,	vec4( 1.0, 1.0, 1.0, 1.0 )
	);

	// 走査線
	COLOR = mix(
		COLOR
	,	vec4( 0.0, 0.0, 0.0, 1.0 )
	,	float( 0 == int( fixed_uv.y / SCREEN_PIXEL_SIZE.y ) % 2 ) * crt_scan_line_color
	);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jqgqf"]
shader = SubResource("Shader_rl8gx")
shader_parameter/crt_curve = 0.032
shader_parameter/crt_scan_line_color = 0.111
shader_parameter/aperture_grille_rate = 0.13
shader_parameter/rf_switch_esque_blur = 1.0
shader_parameter/white_noise_rate = 0.011

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_8behb"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7pd4x"]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id="PlaneMesh_8rmqp"]
material = SubResource("ShaderMaterial_7pd4x")
size = Vector2(1.3, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_qgg4k"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_notpm"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_15gb5"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_qgg4k")
emission_enabled = true
emission_energy_multiplier = 4.0
emission_texture = SubResource("ViewportTexture_notpm")

[sub_resource type="PlaneMesh" id="PlaneMesh_mtila"]
material = SubResource("ShaderMaterial_7pd4x")
size = Vector2(1.3, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_w33rq"]
viewport_path = NodePath("tvTurn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2dd52"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_w33rq")

[sub_resource type="BoxShape3D" id="BoxShape3D_inrdw"]
size = Vector3(1.73877, 1.19421, 0.98999)

[sub_resource type="BoxShape3D" id="BoxShape3D_2qlnf"]
size = Vector3(7.14941, 1, 9.06665)

[sub_resource type="BoxShape3D" id="BoxShape3D_3xc3g"]
size = Vector3(1.73877, 1.19421, 0.98999)

[sub_resource type="Animation" id="Animation_3t3nl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("screen2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uv68e"]
resource_name = "turnOff"
length = 3.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tvTurn/VideoStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("screen2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pauseTv"
}]
}

[sub_resource type="Animation" id="Animation_sh7i1"]
resource_name = "turnOn"
length = 3.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tvTurn/VideoStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("screen2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.36667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pauseTv"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6gpw"]
_data = {
"RESET": SubResource("Animation_3t3nl"),
"turnOff": SubResource("Animation_uv68e"),
"turnOn": SubResource("Animation_sh7i1")
}

[node name="Tele_001" type="MeshInstance3D"]
transform = Transform3D(1.82549, 0, -0.317244, 0, 1.85285, 0, 0.317244, 0, 1.82549, 2.46884, -28.8014, 13.9335)
mesh = SubResource("ArrayMesh_uf870")
skeleton = NodePath("")

[node name="SubViewport" type="SubViewport" parent="."]
scaling_3d_scale = 1.0
size = Vector2i(640, 360)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="SubViewport"]
offset_right = 640.0
offset_bottom = 368.0
audio_track = 1
stream = SubResource("VideoStreamTheora_7ive1")
volume_db = -10.31
expand = true
loop = true

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
material = SubResource("ShaderMaterial_jqgqf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="tvTurn" type="SubViewport" parent="."]
scaling_3d_scale = 1.0
size = Vector2i(640, 360)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="tvTurn"]
offset_right = 640.0
offset_bottom = 368.0
audio_track = 1
stream = SubResource("VideoStreamTheora_8behb")
volume_db = -10.31
expand = true

[node name="ColorRect" type="ColorRect" parent="tvTurn"]
material = SubResource("ShaderMaterial_jqgqf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="screen" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74227e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74227e-08, -1, 4.37114e-08, 0.213855, 0, -0.383293)
mesh = SubResource("PlaneMesh_8rmqp")
surface_material_override/0 = SubResource("StandardMaterial3D_15gb5")

[node name="screen2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 7.45058e-08, -3.55271e-15, 0, -4.37114e-08, -1, -7.45058e-08, -1, 4.37114e-08, 0.212277, 0, -0.392373)
visible = false
mesh = SubResource("PlaneMesh_mtila")
surface_material_override/0 = SubResource("StandardMaterial3D_2dd52")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.539709, 0, 0, 0, 0.539709, 0, 0, 0, 0.539709, 0.286759, 0, -0.392174)
stream = ExtResource("3_da2kf")
volume_db = -17.0

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, -4.47035e-08, 0, 1, 0, 4.47035e-08, 0, 1, -0.0139158, 0.0129433, 0.0148926)
shape = SubResource("BoxShape3D_inrdw")

[node name="timerArea" type="Area3D" parent="." groups=["interactable"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="timerArea"]
transform = Transform3D(0.997215, 0, 0.0745784, 0, 1, 0, -0.0745784, 0, 0.997215, 0.177896, 0, -4.01205)
shape = SubResource("BoxShape3D_2qlnf")

[node name="Area3D" type="Area3D" parent="." node_paths=PackedStringArray("video", "video2", "audio", "animationPlayer", "mesh")]
script = ExtResource("2_qmbta")
video = NodePath("../SubViewport/VideoStreamPlayer")
video2 = NodePath("../tvTurn/VideoStreamPlayer")
audio = NodePath("../AudioStreamPlayer3D")
animationPlayer = NodePath("../AnimationPlayer")
mesh = NodePath("..")
counter = ExtResource("4_p314x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, -4.47035e-08, 0, 1, 0, 4.47035e-08, 0, 1, -2.38419e-07, 0.019228, -0.0137959)
shape = SubResource("BoxShape3D_3xc3g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r6gpw")
}

[connection signal="body_entered" from="timerArea" to="." method="_on_timer_area_body_entered"]
[connection signal="body_entered" from="timerArea" to="Area3D" method="_on_timer_area_body_entered"]
[connection signal="body_exited" from="timerArea" to="." method="_on_timer_area_body_exited"]
[connection signal="body_exited" from="timerArea" to="Area3D" method="_on_timer_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Area3D" method="_on_animation_player_animation_finished"]
